Modification de la structure de la page, ajout de nouvelles règles css, ajout d'images

--- a/index.html
+++ b/index.html
@@ -8,37 +8,48 @@
 	<script src="js/html5shiv.js"></script>
 </head>
 <body>
-	<div class="main">
+	<header>
 		<h1>Pika Cat</h1>
 		<p>Croisement entre un Pikachu et un chat<br />Adopte moi et c'est le coup de foudre garantie</p>
+		<a href="img/pikacat.jpg" title="Cliquer pour agrandir"><img src="img/min-pikacat.jpg" alt="Photo d'un croisement génétique entre un Pikachu et un chat" /></a>
+	</header>
+
+	<div class="liseret">
+		<img src="img/Boulderbadge.png" alt="Boulder badge" />
+		<img src="img/50px-Cascadebadge.png" alt="Cascade badge" />
+		<img src="img/48px-Thunderbadge.png" alt="Thunder badge" />
+		<img src="img/50px-Rainbow_Badge.png" alt="Rainbow badge" />
+		<img src="img/44px-Soulbadge.png" alt="Soul badge" />
+		<img src="img/49px-Marshbadge.png" alt="Marsh badge" />
+		<img src="img/Volcanobadge.png" alt="Volcano badge" />
+		<img src="img/50px-Earthbadge.png" alt="Earth badge" />
+	</div><!--
+	
+	--><section class="first-section">
+		<h2>Mon expérience</h2>
+		<ul>
+			<li><strong>2015</strong> : Champion du Pokkén Tournament</li>
+			<li><strong>2014</strong> : Générateur éléctrique de secours chez EDF</li>
+			<li><strong>1996 à 2015</strong> : Plusieurs fois champion des différentes ligues Pokemon</li>
+			<li><strong>1999 à 2014</strong> : Plusieurs fois champion du tournois Smash Bros</li>
+			<li><strong>1998</strong> : surfeur pro</li>
+		</ul>
+	</section><!--
+	
+	--><section>
+		<h2>Mes compétences</h2>
+		<ul>
+			<li>Maitrise de surf</li>
+			<li>Griffe, Cage-Eclair, Eclair, Fatal-Foudre, Poing-Eclair, Tonnerre, Coup d'jus, DélugePlasmique</li>
+			<li>Jeté d'objet, coup de marteau, coup de batte</li>
+			<li>Ronronnement, massage avec mes coussinets</li>
+			<li>Chargeur sans fil pour téléphone portable, défibrillateur et pika taser</li>
+		</ul>
+	</section><!--
 		
-		<a href="img/pikacat.jpg"><img src="img/min-pikacat.jpg" alt="Photo d'un croisement génétique entre un Pikachu et un chat" /></a>
-		
-		<section>
-			<h2>Mon expérience</h2>
-			<ul>
-				<li><strong>2015</strong> : Champion du Pokkén Tournament</li>
-				<li><strong>2014</strong> : Générateur éléctrique de secours chez EDF</li>
-				<li><strong>1996 à 2015</strong> : Plusieurs fois champion des différentes ligues Pokemon</li>
-				<li><strong>1999 à 2014</strong> : Plusieurs fois champion du tournois Smash Bros</li>
-				<li><strong>1998</strong> : surfeur pro</li>
-			</ul>
-		</section>
-		
-		<section>
-			<h2>Mes compétences</h2>
-			<ul>
-				<li>Maitrise de surf</li>
-				<li>Griffe, Cage-Eclair, Eclair, Fatal-Foudre, Poing-Eclair, Tonnerre, Coup d'jus, DélugePlasmique</li>
-				<li>Jeté d'objet, coup de marteau, coup de batte</li>
-				<li>Ronronnement, massage avec mes coussinets</li>
-			</ul>
-		</section>
-			
-		<section>
-			<h2>Ma formation</h2>
-			<p>Alors là c'est simple... J'ai tout appris de Sacha grand maître Pokemon de Bourg Palette !</p>
-		</section>
-	<div>
+	--><section>
+		<h2>Ma formation</h2>
+		<p>Alors là c'est simple... J'ai tout appris de Sacha grand maître Pokemon de Bourg Palette !</p>
+	</section>
 </body>
 </html>
